# git_pro

./: .gitignore  DOCX 文档.docx  设计模式
Bash_demo/: ShellParameterCount  ShellShuRuShuChu  Shell传递参数  Shell基本运算符  hanshu  printf命令  suffix_change_dir.sh  test1.sh  test2.sh  test命令  无标题文档  流程控制
Bash_demo/diff/: a.txt  b.txt  diff_not_effect.sh
Bash_demo/进程号/: run.h
C-demo/: 多源文件共用变量
C-demo-for-algorithm/Hash/: Hash.pro  main.cpp
C-demo-for-algorithm/ImgDNA/: ImgDNA.pro  ReadMe.md  cnn.cpp  cnn.h  logger.h  main.cpp  readfromdir.cpp  readfromdir.h
C-demo-for-algorithm/LinkList/: main.cpp
C-demo-for-algorithm/Ranking/: 无标题文档
C-demo-for-algorithm/ReadNameFromDir/: ReadNameFromDir.pro  main.cpp  readfromdir.cpp
C-demo-for-algorithm/build-ImgDNA-Desktop_Qt_5_10_0_GCC_64bit-Debug/: ImgDNA
C-demo-for-algorithm/build-ImgDNA-Desktop_Qt_5_14_0_GCC_64bit-Debug/: ImgDNA
C-demo-for-algorithm/culsterFunc/: culsterFunc.pro  hashfeature.cpp  main.cpp
C-demo-for-algorithm/fileTox16/: main.cpp
C-demo/ExceptionExercise/: main.cpp
Head_First_Python/: 2_Data.py  3_strcut_data.py  4_code_reuse.py
PytorchDemo/: AutogradDemo.py  CUDADemo.py  ExtendingAutograd.py  F3.TXT  MoveFileToSelfDir.py  diff_imgload_imgread.py  file.txt  file1.txt  softmax_loss.py  test.py
docker-demo/: Dockerfile
func-opencv/: Normlize_python  check_img_ok
func-opencv/RunOpenCV/: CMakeLists.txt  main.cpp  testaffinetransform.cpp
gitskills/: README.md  git合并commit和撤销commit.txt  无标题文档  无标题文档.txt
moudule/: setup.py  vsearch.py
offerCode/: MergeList14.py  Rectangle15.py  ReverseList13.py
(+103 files in other folders)
